fix: сверстать меню

--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
             <p class="header__text">Обратная связь</p>
         </div>
     </header>
+    <main class="content">
+        <ul class="menu">
+            <li class="menu__list">
+                Главная
+            </li>
+            <div class="menu__line"></div>
+            <li class="menu__list">
+                Каталог
+            </li>
+            <div class="menu__line"></div>
+            <li class="menu__list">
+                Доставка и оплата
+            </li>
+            <div class="menu__line"></div>
+            <li class="menu__list">
+                Прайс-лист
+            </li>
+            <div class="menu__line"></div>
+            <li class="menu__list">
+                Контакты
+            </li>
+
+        </ul>
+    </main>
     
 </body>
 </html>
