--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
     </header>
     <main class="content">
+
         <ul class="menu">
             <li class="menu__list">
                 Главная
@@ -37,9 +38,131 @@
             <li class="menu__list">
                 Контакты
             </li>
-
         </ul>
+
+        <section class="slider">
+            <div class="slider__container">
+                <img class="slider__image" src="./images/slide_1.png" alt="Картинка первая">
+                <!-- <img class="slider__image" src="./images/slide_2.png" alt="Картинка вторая"> -->
+            </div>
+            <div class="slider__buttons">
+                <button class="slider__button-left"></button>
+                <button class="slider__button-right"></button>
+            </div>
+        </section>
+        <section class="catalog">
+            <div class="breadcrumbs">
+                <a class="breadcrumbs__link" href="#">Главная</a>
+                <span>/</span>
+                <a class="breadcrumbs__link" href="#">Каталог</a>
+                <span>/</span>
+                <span class="breadcrumbs__text">Бытовая техника</span>
+
+            </div>
+            <div class="catalog__container">
+                <div class="catalog__left">
+                    <div class="catalog__tree">
+                        <ul class="tree__firstlevel_list">
+                            <li class="tree__firstlevel_item">Автомобили</li>
+                            <li class="tree__firstlevel_item"><a class="catalogtree__firstlevel-link" href="#">Бытовая техника</a>
+                                <ul class="tree__secondlevel_list">
+                                    <li class="tree__secondlevel_item"><a class="catalogtree__secondlevel-link" href="#">Микроволновки</a></li>
+                                    <li class="tree__secondlevel_item">Холодильники</li>
+                                    <li class="tree__secondlevel_item">Посудомоечные машины</li>
+                                    <li class="tree__secondlevel_item">Чайники</li>
+                                </ul>
+                            </li>
+                            <li class="tree__firstlevel_item">Мобильная техника</li>
+                            <li class="tree__firstlevel_item">Компьютеры</li>
+                            <li class="tree__firstlevel_item">Одежда</li>
+                            <li class="tree__firstlevel_item">Недвижимость</li>
+                        </ul>
+                    </div>
+                    <div class="widget">
+                        <img class="widget__icon" src="images/msexcel.png"/>
+                        <p class="widget__title">Прайс-лист</p>
+
+                    </div>
+                </div>
+                <div class="catalog__right">
+                    <div class="catalog__list">
+                        <div class="card">
+                            <img class="card__image" src="images/nophoto.png"/>
+                            <p class="card__title">
+                                Самый клёвый чайник, который надо купить!
+                            </p>
+                            <p class="card__price">1 900 р.</p>
+                        </div>
+                        <div class="card">
+                            <img class="card__image" src="images/nophoto.png"/>
+                            <p class="card__title">
+                                Самый клёвый чайник, который надо купить!
+                            </p>
+                            <p class="card__price">1 900 р.</p>
+                        </div>
+                        <div class="card">
+                            <img class="card__image" src="images/nophoto.png"/>
+                            <p class="card__title">
+                                Самый клёвый чайник, который надо купить!
+                            </p>
+                            <p class="card__price">1 900 р.</p>
+                        </div>
+                        <div class="card">
+                            <img class="card__image" src="images/nophoto.png"/>
+                            <p class="card__title">
+                                Самый клёвый чайник, который надо купить!
+                            </p>
+                            <p class="card__price">1 900 р.</p>
+                        </div>
+                        <div class="card">
+                            <img class="card__image" src="images/nophoto.png"/>
+                            <p class="card__title">
+                                Самый клёвый чайник, который надо купить!
+                            </p>
+                            <p class="card__price">1 900 р.</p>
+                        </div>
+                    </div>
+                    <div class="catalog__pagination">
+                        <span class="page__indicator">1</span>
+                        <span class="page__indicator">2</span>
+                        <span class="page__indicator page__indicator_active">3</span>
+                        <span class="page__indicator">4</span>
+                        <span class="page__indicator">5</span>
+                        <span class="page__indicator">6</span>
+                        <span class="page__indicator">7</span>
+                    </div>
+                    <div class="about">
+                        <p class="about__text">
+                            Компания «Тестовый Макет» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души. 
+                        </p>
+                        <p class="about__text">
+                            Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+            </div>
+        </section>
     </main>
-    
+    <footer class="footer">
+        <p class="footer__text">
+            © 2012–2013 ЗАО «Компания» info@name.ru
+        </p>
+        <div class="fastlinks">
+            <a class="footer__link" href="#">Главная</a>
+            <a class="footer__link" href="#">Каталог</a>
+            <a class="footer__link" href="#">Доставка и оплата</a>
+            <a class="footer__link" href="#">Прайс-лист</a>
+            <a class="footer__link" href="#">Контакты</a>
+        </div>
+        <div class="developer">
+            <p class="footer__text footer__text_right">
+                <a class="footer__link">Разработка сайта</a>
+                — компания «Тестовый Макет»
+            </p>  
+        </div>
+    </footer>
 </body>
 </html>
