fix: доделать корзины в карточках

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         </ul>
                     </div>
                     <div class="widget">
-                        <img class="widget__icon" src="images/msexcel.png"/>
-                        <p class="widget__title">Прайс-лист</p>
-
+                        <a href="#" class="widget__title"><img class="widget__icon" src="images/msexcel.png"/>
+                        Прайс-лист
+                        </a>
                     </div>
                 </div>
                 <div class="catalog__right">
@@ -91,35 +91,50 @@
                             <p class="card__title">
                                 Самый клёвый чайник, который надо купить!
                             </p>
-                            <p class="card__price">1 900 р.</p>
+                            <div class="card__block">
+                                <p class="card__price">1 900 р.</p>
+                                <a href="#"><img class="card__basket" src="./images/addtobasket_mini.png"/></a>
+                            </div>
                         </div>
                         <div class="card">
                             <img class="card__image" src="images/nophoto.png"/>
                             <p class="card__title">
                                 Самый клёвый чайник, который надо купить!
                             </p>
-                            <p class="card__price">1 900 р.</p>
+                            <div class="card__block">
+                                <p class="card__price">1 900 р.</p>
+                                <a href="#"><img class="card__basket" src="./images/addtobasket_mini.png"/></a>
+                            </div>
                         </div>
                         <div class="card">
                             <img class="card__image" src="images/nophoto.png"/>
                             <p class="card__title">
                                 Самый клёвый чайник, который надо купить!
                             </p>
-                            <p class="card__price">1 900 р.</p>
+                            <div class="card__block">
+                                <p class="card__price">1 900 р.</p>
+                                <a href="#"><img class="card__basket" src="./images/addtobasket_mini.png"/></a>
+                            </div>
                         </div>
                         <div class="card">
                             <img class="card__image" src="images/nophoto.png"/>
                             <p class="card__title">
                                 Самый клёвый чайник, который надо купить!
                             </p>
-                            <p class="card__price">1 900 р.</p>
+                            <div class="card__block">
+                                <p class="card__price">1 900 р.</p>
+                                <a href="#"><img class="card__basket" src="./images/addtobasket_mini.png"/></a>
+                            </div>
                         </div>
                         <div class="card">
                             <img class="card__image" src="images/nophoto.png"/>
                             <p class="card__title">
                                 Самый клёвый чайник, который надо купить!
                             </p>
-                            <p class="card__price">1 900 р.</p>
+                            <div class="card__block">
+                                <p class="card__price">1 900 р.</p>
+                                <a href="#"><img class="card__basket" src="./images/addtobasket_mini.png"/></a>
+                            </div>
                         </div>
                     </div>
                     <div class="catalog__pagination">
